WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159310
HTMLAttachment elements don't receive clicks after the first on iOS
https://bugs.webkit.org/show_bug.cgi?id=159310
Summary
HTMLAttachment elements don't receive clicks after the first on iOS
Enrica Casucci
Reported
2016-06-30 13:23:34 PDT
The first click on the element selects it. On iOS we prevent clicks to go through on a selected element, in order to toggle the selection menu.
rdar://problem/25776940
Attachments
Patch
(1.38 KB, patch)
2016-06-30 13:28 PDT
,
Enrica Casucci
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2016-06-30 13:28:38 PDT
Created
attachment 282458
[details]
Patch
Tim Horton
Comment 2
2016-06-30 13:29:38 PDT
Is this testable?
WebKit Commit Bot
Comment 3
2016-06-30 13:30:14 PDT
Attachment 282458
[details]
did not pass style-queue: ERROR: Source/WebCore/html/HTMLAttachmentElement.h:55: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 4
2016-06-30 15:21:23 PDT
(In reply to
comment #2
)
> Is this testable?
Actually I think so, even without using gestures.
Enrica Casucci
Comment 5
2016-06-30 16:45:15 PDT
We already have a test that checks the selection of the attachment element. I just need to change it to reliably testing on iOS too. I'll add it to the patch before landing.
Enrica Casucci
Comment 6
2016-07-05 15:24:56 PDT
Updated test to correctly detect new behavior. Committed revision 202835.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug