HTMLAttachment elements don't receive clicks after the first on iOS. https://bugs.webkit.org/show_bug.cgi?id=159310 rdar://problem/25776940

Reviewed by Tim Horton.

Source/WebCore:

shouldSelectOnMouseDown() now returns false on iOS.

* html/HTMLAttachmentElement.h:

LayoutTests:

Updated existing test to correctly reflect the new behavior.

* fast/attachment/attachment-select-on-click.html:
* platform/ios-simulator-wk1/TestExpectations:
* platform/ios-simulator/fast/attachment/attachment-select-on-click-expected.txt:
* platform/mac/fast/attachment/attachment-select-on-click-expected.txt:



Canonical link: https://commits.webkit.org/177566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202835 268f45cc-cd09-0410-ab3c-d52691b4dbfc